tests/negative/semantic/byte_assign_int_variable/input.ci
void main(string[] args) {
    int n = 10;
    byte b = n;
}
